# tt2

./: .gitignore  presentation.md  presentation_final.html  presentation_final.md  pyproject.toml
assets/: beam.css
base_code/: .gitignore  constants.py  helpers.py  seed.py  train_test.py
base_code/dataloaders/: base.py
base_code/datasets/: __init__.py  base.py  dry_beans.py
base_code/losses/: base.py  ewc.py
base_code/metrics/: average_accuracy.py  average_incremental_accuracy.py
base_code/models/: cnn.py  mlp.py  mlp_dropout.py  poc.py
base_code/optimizers/: base.py  odg.py
base_code/plugins/: __init__.py  weight_storage.py
base_code/preprocessing/: nomalize_standarizer.py  normalizer.py  standarizer.py
base_code/training/: __init__.py  acewc_v1.py  cewc_v1.py  cts_v1.py  eewc.py  embedded.py  esewc.py  ewc.py  mwun.py  mwun_v2.py  odg.py  ogd.py  store_loss_base.py
cifar/: ewc_cnn.ipynb  plots.ipynb  proposal_3_cnn.ipynb
final_notebooks/standard/: agem.ipynb  (+10 more)
mnist/: ewc_cnn.ipynb  plots.ipynb  proposal_3_cnn.ipynb
notebooks/: acewc.ipynb  agem.ipynb  ar1.ipynb  cewc.ipynb  cewc_kirkpatrick.ipynb  cts.ipynb  cumulative.ipynb  elastic_weight_consolidation.ipynb  ewc.ipynb  ewc_kirkpatrick.ipynb  icarl.ipynb  mwun.ipynb  ogd.ipynb  orthogonal_gradient_descent.ipynb  poc.ipynb  sgd.ipynb  stochastic_gradient_descent.ipynb
results/: class_saturation.ipynb  class_saturation_presentation.ipynb  retraining_saturation.ipynb  standard.ipynb  standard_presentation.ipynb
saved_metrics/: cumulative.pkl  ewc.pkl  ewc_kirkpatrick.pkl  mwun.pkl  sgd.pkl
(+75 files in other folders)
